force-app/main/default/objects/ImportFiles__c/ImportFiles__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Informations sur les fichiers de comptes importés en masse</description>
    <label>Fichiers importés</label>
</CustomObject>