force-app/main/default/objects/ImportFiles__c/fields/dateImportation__c.field-meta.xml
<CustomField>
    <fullName>dateImportation__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Date d&apos;importation</label>
    <required>true</required>
    <type>Date</type>
</CustomField>