force-app/main/default/objects/ImportFiles__c/fields/dateImportationFin__c.field-meta.xml
<CustomField>
    <fullName>dateImportationFin__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Date de fin d&apos;importation</label>
    <required>true</required>
    <type>Date</type>
</CustomField>