force-app/main/default/objects/ImportFiles__c/fields/nomFichierSource__c.field-meta.xml
<CustomField>
    <fullName>nomFichierSource__c</fullName>
    <label>Nom du fichier source</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>