force-app/main/default/objects/ImportFiles__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>nomFichierSource__c</columns>
    <columns>dateImportation__c</columns>
    <columns>dateImportationFin__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
    <language>fr</language>
</ListView>